updated gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,15 @@
+# Documentation
 HELP.md
-.gradle
+
+# ========== Build ==========
+.gradle/
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### IntelliJ IDEA ###
-.idea
+# ========== IntelliJ IDEA ==========
+.idea/
 *.iws
 *.iml
 *.ipr
@@ -26,12 +17,37 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
-### NetBeans ###
+# ========== Spring Tool Suite (STS) ==========
+.apt_generated/
+.classpath
+.factorypath
+.project
+.settings/
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+# ========== NetBeans ==========
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
 
-### VS Code ###
+# ========== VS Code ==========
 .vscode/
+
+# ========== Logs ==========
+*.log
+
+# ========== OS Files ==========
+.DS_Store
+Thumbs.db
+
+# ========== Environment / Secrets ==========
+.env
+*.env
+application-dev.properties
+application-dev.yml
